// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legacy Content - Peer - Guidelines Badge Component should NOT display failing label when passingGuidelines is true 1`] = `
<pf-guidelines-badge
  IncludeSimilarityCheck={[Function Boolean]}
  guidelinesService={[Function DojGuidelinesStub]}
>
  
</pf-guidelines-badge>
`;

exports[`Legacy Content - Peer - Guidelines Badge Component should display failing label when passingGuidelines is false 1`] = `
<pf-guidelines-badge
  IncludeSimilarityCheck={[Function Boolean]}
  guidelinesService={[Function DojGuidelinesStub]}
>
  <div
    class="guidelines-label failing"
    popovertitle="Guidelines"
    triggers="mouseenter:mouseleave"
  >
    <fa-icon
      icon="exclamation-circle"
    />
  </div>
</pf-guidelines-badge>
`;

exports[`Legacy Content - Peer - Guidelines Badge Component should display warning label when hasNoDominatingData is false and passingGuidelines is true 1`] = `
<pf-guidelines-badge
  IncludeSimilarityCheck={[Function Boolean]}
  guidelinesService={[Function DojGuidelinesStub]}
>
  <div
    class="guidelines-label"
    popovertitle="Guidelines"
    triggers="mouseenter:mouseleave"
  >
    <fa-icon
      icon="exclamation-circle"
    />
  </div>
</pf-guidelines-badge>
`;
